MFC: 1.11

Allow the targeted CPU type to be set via -mcpu instead of
limiting to the hardcoded equivalent of -mcpu=ultrasparc.

PR:		109510

Former-commit-id: 5a8e9062c405ddcce811424e50ebe97b0e14780f